# lochat-server

./: Dockerfile  LICENSE  docker-compose.yml  example.env  pyproject.toml  requirements.txt
app/: models.py  ws_urls.py
app/consumers/: chatConsumer.py  redisQueueConsumer.py
app/controllers/: accountController.py  accountsController.py  accountsConversationsController.py  authController.py  conversationController.py  conversationsController.py  mediaController.py  mediasController.py  messageController.py  messagesController.py  profileController.py  profileConversationController.py  relationController.py
app/dtos/: accountDTOs.py  authDTOs.py  baseDTO.py  conversationDTOs.py  mediaDTOs.py  membershipDTO.py  messageDTOs.py  profileDTOs.py  relationDTOs.py
app/entities/: account.py  accountConversation.py  accountsConversations.py  conversation.py  conversations.py  media.py  medias.py  message.py  messages.py  profile.py  profileConversation.py  relation.py
app/enums/: conversationTypes.py  httpStatus.py  provinces.py  relationStatus.py  relationTypes.py  responseCodes.py  responseMessages.py
app/helpers/: UnitOfWorkWrapper.py  baseResponse.py  cookieHelper.py  exceptionHelper.py
app/mapping/: accountMapping.py  accountsConversationsMapping.py  conversationMapping.py  conversationsMapping.py  mediaMapping.py  mediasMapping.py  messageMapping.py  messagesMapping.py  profileConversationMapping.py  profileMapping.py  relationMapping.py
app/middlewares/: exceptionMiddleware.py  jwtMiddleware.py  wsJwtMiddleware.py
config/: asgi.py  settings.py  urls.py
(+56 files in other folders)
